# semantics-2026-effective-mirror

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  config.cloud.yaml  config.local.yaml  config.smoke.yaml  config.yaml  main.py  pyproject.toml
data/: scenarios.json  scenarios.smoke.json
data/dsl/: legenda.schema.json
data/dsl/dcpl/: examples.json  grammar.bnf  grammar.lark
data/dsl/eflint/: examples.json  grammar.bnf  grammar.lark  schema.json
data/dsl/odrl/: examples.json  odrl-2.2.ld.json
data/dsl/symboleo/: grammar.bnf
inputs/: scenarios.json
inputs/dsl/dcpl/: examples.json  schema.json
inputs/dsl/odrl/: examples.json  schema.json
src/: analyze.py  config.py  embeddings.py  main.py  models.py  pipeline.py  visualize.py
src/mirroring/: __init__.py  pipeline.py
src/mirroring/prompts/: decode.jinja  encode.jinja
src/prompts/: decode.jinja  encode.jinja  error_decode.jinja  error_validation.jinja  legenda.jinja  refine.jinja
src/utils/: embeddings.py  llama_server.py  models.py  strings.py  structural.py
