[project]
name = "semantics-2026-mirror"
version = "0.1.0"
description = "Reproduction package for the SEMANTICS 2026 submission on neurosymbolic mirroring of normative specifications."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.72.0",
    "backoff>=2.2.1",
    "einops>=0.8.1",
    "google-genai>=1.49.0",
    "jinja2>=3.1.6",
    "jsonschema>=4.25.1",
    "lark>=1.3.1",
    "ollama>=0.6.0",
    "openai>=2.7.1",
    "pydantic>=2.12.4",
    "pyyaml>=6.0.3",
    "sentence-transformers>=5.1.2",
    "tqdm>=4.67.1",
]

[project.scripts]
mirror = "main:main"

[dependency-groups]
dev = [
    "types-jsonschema>=4.25.1.20251009",
    "types-pyyaml>=6.0.12.20250915",
    "types-tqdm>=4.67.0.20250809",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
force-include = { "main.py" = "main.py" }
